# rsd-lib

./: .coveragerc  .gitignore  .gitreview  HACKING.rst  README.rst  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst  usage.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
rsd_lib/: __init__.py  main.py  utils.py
rsd_lib/resources/: base.py
rsd_lib/resources/chassis/: chassis.py
rsd_lib/resources/fabric/: endpoint.py  fabric.py  zone.py
rsd_lib/resources/node/: mappings.py  node.py
rsd_lib/resources/storage_service/: physical_drive.py  remote_target.py  storage_service.py
rsd_lib/resources/v2_1/: __init__.py
rsd_lib/resources/v2_1/chassis/: chassis.py
rsd_lib/resources/v2_1/fabric/: endpoint.py  fabric.py  zone.py
rsd_lib/resources/v2_1/manager/: manager.py
rsd_lib/resources/v2_1/node/: mappings.py  node.py  schemas.py
rsd_lib/resources/v2_1/storage_service/: logical_drive.py  physical_drive.py  remote_target.py  storage_service.py
rsd_lib/resources/v2_1/system/: memory.py  system.py
rsd_lib/resources/v2_2/: __init__.py
rsd_lib/resources/v2_2/system/: memory.py  memory_metrics.py  metrics.py  processor.py  processor_metrics.py  system.py
rsd_lib/resources/v2_2/telemetry/: telemetry.py
rsd_lib/resources/v2_3/: __init__.py
rsd_lib/resources/v2_3/fabric/: endpoint.py  endpoint_schemas.py  fabric.py
rsd_lib/resources/v2_3/node/: node.py  (+1 more)
rsd_lib/tests/: test_rsd_lib.py
rsd_lib/tests/unit/: test_main.py
tools/: tox_install.sh
(+104 files in other folders)
